--- a/src/App.scss
+++ b/src/App.scss
@@ -40,9 +40,7 @@ $lg-padding: 20px;
 
 .tuva-editor-container {
   display: flex;
-  justify-content: flex-end;
   flex-direction: column;
-  align-items: end;
 }
 
 // .tuva-editor-toolbar, .tuva-container{
@@ -65,6 +63,8 @@ $lg-padding: 20px;
 
 .tuva-editor {
   width: calc(100% - #{2 * $lg-padding});
+  height: 100%;
+  display:inline-block;
   &:focus {
     outline: none;
   }
@@ -99,7 +99,7 @@ $lg-padding: 20px;
 
 
 .preview {
-  p {
+  p,h1,h2,h3 {
     margin: 0;
   }
 }
